--- a/detail-19-2021.html
+++ b/detail-19-2021.html
@@ -13,24 +13,27 @@
 		}
 
 		h2 {
-			text-align: center;
-			margin-top: 50px;
+			/*text-align: center;*/
+			margin-left: 230px;
+			margin-top: 20px;
 		}
 
 		h1 {
-			text-align: center;
+			/*text-align: center;*/
+			margin-left: 280px;
 		}
 
 		table {
 
-			margin-left: 300px;
+			margin-left: 25px;
+			border: 5px dashed black;
 		}
 
 		.assembly {
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 16px;
 			padding: 0 8px;
 			display: inline;
 		}
@@ -43,7 +46,7 @@
 			border-collapse: collapse;
 			border: 1px solid black;
 			border-radius: 10px;
-			font-size: 14px;
+			font-size: 17px;
 			padding: 0 8px;
 		}
 
@@ -66,16 +69,16 @@
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>238</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">238.Bandwan</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -83,7 +86,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>241055</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -102,9 +105,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of <br>Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -140,7 +143,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -171,23 +174,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>239</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">239.Balarampur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -195,7 +198,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>197965</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -214,9 +217,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -252,7 +255,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -283,23 +286,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>240</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">240.Baghmundi</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -307,7 +310,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>206303</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -326,9 +329,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -364,7 +367,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -395,23 +398,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of <br>Assembly</b></td>
 					<td>241</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">241.Joypur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of <br>Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -419,7 +422,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>202767</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -438,9 +441,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -476,7 +479,7 @@
 				<td>62180</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -507,23 +510,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>242</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">242.Purulia</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of <br>Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -531,7 +534,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>206868</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -550,9 +553,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of <br>vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -588,7 +591,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -619,23 +622,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>243</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">243.Manbazar</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -643,7 +646,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>213729</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -662,9 +665,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -700,7 +703,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -731,23 +734,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of <br>Assembly</b></td>
 					<td>244</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of <br>Assembly</b></td>
 					<td class="name">244.Kashipur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -755,7 +758,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>194892</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -774,9 +777,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of <br>Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -812,7 +815,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -843,23 +846,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>245</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of<br> Assembly</b></td>
 					<td class="name">245.Para</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -867,7 +870,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of<br> Vote polled</b></td>
 				<td>194021</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -886,9 +889,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -924,7 +927,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -955,23 +958,23 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div><br>
 	<div>
 		<table>
 			<th class="assembly" scope="col" colspan="3">
 				<tr>
-					<td><b>Name of District</b></td>
+					<td><b>Name of<br> District</b></td>
 					<td>Purulia</td>
-					<td><b>No. of Assembly</b></td>
+					<td><b>No. of<br> Assembly</b></td>
 					<td>246</td>
-					<td><b>Name of Assembly</b></td>
+					<td><b>Name of <br>Assembly</b></td>
 					<td class="name">246.Raghunathpur</td>
 				</tr>
 			</th>
 			<tr>
-				<td><b>No. of Voters</b></td>
+				<td><b>No. of<br> Voters</b></td>
 				<td>xxxxxx</td>
 				<td><b>Male</b></td>
 				<td>xxxxxx</td>
@@ -979,7 +982,7 @@
 				<td>xxxxxx</td>
 			</tr>
 			<tr>
-				<td><b>No. of Vote polled</b></td>
+				<td><b>No. of Vote<br> polled</b></td>
 				<td>214690</td>
 				<td><b>Male</b></td>
 				<td>xxxxxxx</td>
@@ -998,9 +1001,9 @@
 				<tr>
 					<th>Serial <br>no.</th>
 					<th>Name of Candidate</th>
-					<th>Name of Party</th>
-					<th>Symbol of Party</th>
-					<th>Number of vote taken</th>
+					<th>Name of<br> Party</th>
+					<th>Symbol of<br> Party</th>
+					<th>Number of<br> vote taken</th>
 					<th>Result</th>
 				</tr>
 			</th>
@@ -1036,7 +1039,7 @@
 				<td>xxx</td>
 				<td>xxx</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>005</td>
 				<td>xxx</td>
 				<td>xxx</td>
@@ -1067,7 +1070,7 @@
 				<td><img src="Images/" style="height:16px;"></td>
 				<td>xxx</td>
 				<td>xxx</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div>
 </body>
